# internal-order-book

./: .gitignore  CMakeLists.txt  LOCKFREE_QUEUE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  README.md  TESTING_GUIDE.md  orderbook_service_pb2.py  orderbook_service_pb2_grpc.py  test_grpc_client.py
include/: MatchingEngine.h  Order.h  OrderBook.h  Strategy.h
proto/: orderbook_service.proto
src/: CMakeLists.txt  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderBookServiceImpl.cpp  OrderBookServiceImpl.h  grpc_server_main.cpp  main.cpp
test/: CMakeLists.txt  test_matching_engine.cpp  test_order.cpp  test_orderbook.cpp
